@@ -78,7 +78,7 @@
     <maven-bundle-plugin.version>5.1.8</maven-bundle-plugin.version>
     <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
     <maven-dependency-plugin.version>3.8.1</maven-dependency-plugin.version>
-    <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
+    <maven-enforcer-plugin.version>3.6.0</maven-enforcer-plugin.version>
     <maven-failsafe-plugin.version>3.5.3</maven-failsafe-plugin.version>
     <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
     <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
@@ -105,11 +105,11 @@
     <commons-configuration.version>1.10</commons-configuration.version>
     <commons-csv.version>1.14.0</commons-csv.version>
     <commons-io.version>2.19.0</commons-io.version>
-    <commons-lang3.version>3.17.0</commons-lang3.version>
+    <commons-lang3.version>3.18.0</commons-lang3.version>
     <commons-text.version>1.13.1</commons-text.version>
     <sun.mail.version>2.0.1</sun.mail.version>
     <dom4j.version>2.2.0</dom4j.version>
-    <equalsverifier.version>4.0.4</equalsverifier.version>
+    <equalsverifier.version>4.0.5</equalsverifier.version>
     <failureaccess.version>1.0.3</failureaccess.version>
     <findbugs-annotations.version>1.3.9-1</findbugs-annotations.version>
     <git-commit-id.version>9.0.2</git-commit-id.version>
@@ -136,7 +136,7 @@
     <joda-time.version>2.14.0</joda-time.version>
     <junit-dataprovider.version>1.13.1</junit-dataprovider.version>
     <junit.version>4.13.2</junit.version>
-    <log4j2.version>2.25.0</log4j2.version>
+    <log4j2.version>2.25.1</log4j2.version>
     <maven-javadoc.version>3.11.2</maven-javadoc.version>
     <mockito.version>5.18.0</mockito.version>
     <okhttp.version>4.12.0</okhttp.version>
@@ -159,7 +159,7 @@
     <thrift.version>0.20.0</thrift.version>
     <wiremock.version>3.13.1</wiremock.version>
     <arquillian-graphene.version>2.5.4</arquillian-graphene.version>
-    <keycloak.version>26.3.0</keycloak.version>
+    <keycloak.version>26.3.1</keycloak.version>
     <org.owasp.encoder.version>1.3.1</org.owasp.encoder.version>
     <write.properties.file.version>2.0.0</write.properties.file.version>
   </properties>
@@ -708,6 +708,10 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven-surefire-plugin.version}</version>
+          <configuration>
+            <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>
+            <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
